--- a/AnnouncerBot/AnnouncerBot.csproj
+++ b/AnnouncerBot/AnnouncerBot.csproj
@@ -7,6 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="DSharpPlus" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="4.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
 
