--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ App.config
 AnnouncerBot.dll.config
 /AnnouncerBot/Assets
 /AnnouncerBot/bin/Debug/net5.0/Hello-SoundBible.com-218208532.mp3
+/AnnouncerBot/bin/Debug/net5.0/AnnouncerBot.dll
