After messing aorund with gitignore and doing more research files that contain token keys should not be pushed(Hopefully)Seceret files should not be uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ AnnouncerBot.dll.config
 /AnnouncerBot/Assets
 /AnnouncerBot/bin/Debug/net5.0/Hello-SoundBible.com-218208532.mp3
 /AnnouncerBot/bin/Debug/net5.0/AnnouncerBot.dll
+/AnnouncerBot/App.config
