Reliablilty fixes, Changed:  -Announcer class to non-static. In retrospect I was not thinking all the way through. Having a static class perform concurrent work was not the smartest and I realized alot of performance issues was because of this error.
Added:
-DependencyFactory.cs. Since the Announcer Class was changed it needed to be injected into ConfigModule class to make proper use. Along with this new file the AnnouncerBot Class also has added methods to add Dependency Injection.

Deleted: ChannelWatcher.cs was an early prototype for acheiving the behavior that Announcer.cs acheives. No longer needed hence the deletion of the file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 App.config
 AnnouncerBot.dll.config
 /AnnouncerBot/Assets
-/AnnouncerBot/bin/Debug/net5.0/Hello-SoundBible.com-218208532.mp3
-/AnnouncerBot/bin/Debug/net5.0/AnnouncerBot.dll
+/AnnouncerBot/bin/
 /AnnouncerBot/App.config
